reading whole of the table

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^20.8.2",
     "@types/sequelize": "^4.28.16",
     "sequelize-cli": "^6.6.1",
+    "tsc-watch": "^6.0.4",
     "typescript": "^5.2.2"
   }
 }
